# light-hloc

./: .dockerignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-image.yml
lighthloc/: __init__.py  extract_features.py  match_features.py  pipeline.py  reconstruction.py  viewer.py
lighthloc/associators/: pairs_from_covisibility.py  pairs_from_exhaustive.py  pairs_from_poses.py  pairs_from_retrieval.py  pairs_from_sequance.py
lighthloc/matchers/: lightglue.py  lightglue_onnx.py  lightglue_trt.py
lighthloc/matchers/modules/lightglue/: lightglue.py  utils.py
lighthloc/matchers/modules/lightglue_onnx/: __init__.py  disk.py  end2end.py  lightglue.py  superpoint.py  utils.py  viz2d.py
lighthloc/matchers/modules/lightglue_onnx/ops/: __init__.py  convolution_mode.py  sdpa.py
lighthloc/matchers/modules/lightglue_onnx/optim/: fusion_attention_lightglue.py  onnx_model_lightglue.py
